Rename publications tab; add trade war paper folder

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,8 +16,8 @@ main:
 #  - name: Talks
 #    url: '#talks'
 #    weight: 40
-  - name: Publications
-    url: '#recent_pubs'
+  - name: Research
+    url: '#research_highlights'
     weight: 50
   - name: Contact
     url: '#contact'
